# HtmlConverter-TestDesign-Kata

./: .gitignore  README.md
CSharp/: .gitignore  HtmlConverter-TestDesign-Kata.sln  TDDMicroExercises.csproj  TDDMicroExercises.sln
CSharp/HtmlConverter-Kata/: HtmlConverter-Kata.csproj  HtmlConverter.cs  HtmlPagesConverter.cs  HttpUtility.cs  Program.cs  UnicodeFileToHtmlTextConverter.cs
CSharp/HtmlConverter-Kata.Tests/: HtmlConverter-Kata.Tests.csproj  HtmlConverterTest.cs  HtmlPagesConverterTest.cs  UnicodeFileToHtmlTextConverterTest.cs
CSharp/UnicodeFileToHtmlTextConverter/: HtmlConverter.cs  HtmlPagesConverter.cs  HtmlTextConverter.cs  HttpUtility.cs  UnicodeFileToHtmlTextConverter.cs
CSharp/UnicodeFileToHtmlTextConverter.Tests/: HtmlConverterTest.cs  HtmlPagesConverterTest.cs  HtmlTextConverterTest.cs  UnicodeFileToHtmlTextConverterTest.cs
Java/: pom.xml
TypeScript/: package-lock.json  package.json  tsconfig.json
TypeScript/text-converter/: http-utility.ts  text-converter.ts  unicode-file-to-html-text-converter.ts
TypeScript/text-converter-tests/: text-converter-test.ts  unicode-file-to-html-text-converter-test.ts
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  HtmlConverter.cpp  HtmlConverter.h  HtmlPagesConverter.cpp  HtmlPagesConverter.h  HtmlTextConverter.cpp  HtmlTextConverter.h  UnicodeFileToHtmlTextConverter.cpp  UnicodeFileToHtmlTextConverter.h  main.cpp  string_escape_utils.h
kotlin/: build.gradle.kts
python/: README.md  UnicodeFileToHtmlTextConverter.py  html_converter.py  html_pages_converter.py  test_file.txt
(+35 files in other folders)
